--- a/pixi.toml
+++ b/pixi.toml
@@ -9,13 +9,16 @@ version = "0.1.0"
 [tasks]
 
 [dependencies]
-python = "*"
-ipykernel = "*"
-mediapy = "*"
-matplotlib = "*"
+python = "3.10.*"
+matplotlib = ">=3.9.2,<4"
+numpy = "<=2.1.2,<3"
+ipykernel = ">=6.29.5,<7"
+tqdm = ">=4.66.5,<5"
+jupyter = ">=1.1.1,<2"
+
 
 [pypi-dependencies]
-jax = { version = "*", extras = ["cuda12"] }
-mujoco = "*"
-mujoco-mjx = "*"
-brax = "*"
+torchrl = { version = ">=0.5.0, <0.6", extras = ["atari", "gym-continuous", "rendering"] }
+gym = { version = ">=0.26.2, <0.27", extras = ["atari", "accept-rom-license"] }
+pygame = ">=2.6.1, <3"
+dm-control = ">=1.0.23, <2"
